问题列表维护加空间编号列

--- a/888repair/Views/Repair/ProblemAllVw.cshtml
+++ b/888repair/Views/Repair/ProblemAllVw.cshtml
@@ -316,11 +316,12 @@
                                 //{ field: 'SystemCategory', title: '系统类别', width: 210 },
                                 //{ field: 'Building', title: '大楼别', width: 210 },
                                 //{ field: 'Loaction', title: '位置', width: 210 },
-                                { field: 'Category', title: '类别', width: '15%', },
+                                { field: 'Category', title: '类别', width: '13%', },
+                                { field: 'RoomNum', title: '空间编号', width: '7%', },
                                // { field: 'ResponseEmpname', title: '反应人', width: '15%',},
                                 { field: 'username', width: '15%', title: '人员名称', templet: '#ID-table-demo-css-user2' },
                                 //{ field: 'ChargeEmpname', title: '负责人', width: 170 },
-                                { field: 'ResponseContent', title: '反应内容', width: '19%', style:'color:#020615' },
+                                { field: 'ResponseContent', title: '反应内容', width: '14%', style:'color:#020615' },
                                 { field: 'Status', title: '执行状态', width: '10%',},
                                 {
                                     field: 'CreatTime', title: '填表时间', width: '11%',
