问题列表，问题列表个人，回复问题增加空间编号列

--- a/888repair/Views/Repair/ProblemListIndex.cshtml
+++ b/888repair/Views/Repair/ProblemListIndex.cshtml
@@ -336,11 +336,12 @@
                                 //{ field: 'SystemCategory', title: '系统类别', width: 210 },
                                 //{ field: 'Building', title: '大楼别', width: 210 },
                                 //{ field: 'Loaction', title: '位置', width: 210 },
-                                { field: 'Category', width: '10%', title: '类别'},
+                                { field: 'Category', width: '10%', title: '类别' },
+                                { field: 'RoomNum', title: '空间编号', width: '7%', },
                                 { field: 'username', width: '15%',title: '人员名称', templet: '#ID-table-demo-css-user2' },
                                 //{ field: 'ResponseEmpname', title: '反应人', width: 170 },
                                 //{ field: 'ChargeEmpname', title: '负责人', width: 170 },
-                                { field: 'ResponseContent', width: '25%', title: '反应内容', style: 'color:#020615'},
+                                { field: 'ResponseContent', width: '18%', title: '反应内容', style: 'color:#020615'},
                                 { field: 'Status', width: '10%', title: '执行状态'},
                                 {
                                     field: 'CreatTime', title: '填表时间', width: '12%',
