--- a/888repair/Views/Repair/ReplyRepairIndex.cshtml
+++ b/888repair/Views/Repair/ReplyRepairIndex.cshtml
@@ -155,10 +155,11 @@
                                 //{ field: 'Building', title: 'Building(大楼别)', width: 210 },
                                 //{ field: 'Loaction', title: 'Loaction(位置)', width: 210 },
                                 { field: 'Category', width: '10%', title: '类别' },
+                                { field: 'RoomNum', title: '空间编号', width: '7%', },
                                 { field: 'username', width: '15%', title: '人员名称', templet: '#ID-table-demo-css-user2' },
                                 //{ field: 'ResponseEmpname', title: 'Contacts(反应人)', },
                                 //{ field: 'ChargeEmpname', title: 'Repairer(负责人姓名)'},
-                                { field: 'ResponseContent', width: '25%', title: '反应内容', style: 'color:#020615'},
+                                { field: 'ResponseContent', width: '18%', title: '反应内容', style: 'color:#020615'},
                                 { field: 'Status', width: '10%',  title: '执行状态' },
                                 {
                                     field: 'CreatTime', title: '填表时间', width: '12%', 
