--- a/888repair/Views/Repair/ProblemListPCIndex.cshtml
+++ b/888repair/Views/Repair/ProblemListPCIndex.cshtml
@@ -161,17 +161,17 @@
                                 // { type: 'checkbox', LAY_CHECKED: false},
                                 { fixed: 'left', title: '操作', width: '5%', toolbar: '#barDemo' },
                                // { field: 'RepairId', title: 'RepairID', width: 150 },
-                                { field: 'username', width: '20%', title: '分类项目', templet: '#ID-table-demo-css-user' },
+                               // { field: 'username', width: '20%', title: '分类项目', templet: '#ID-table-demo-css-user' },
                                 //{ field: 'SystemCategory', title: '系统类别', width: 210 },
                                 //{ field: 'Building', title: '大楼别', width: 210 },
                                 //{ field: 'Loaction', title: '位置', width: 210 },
-                                { field: 'Category', width: '10%', title: '类别' },
+                               // { field: 'Category', width: '10%', title: '类别' },
                                 { field: 'RoomNum', title: '空间编号', width: '7%', },
-                                { field: 'username', width: '15%',title: '人员名称', templet: '#ID-table-demo-css-user2' },
+                                { field: 'username', width: '20%',title: '人员名称', templet: '#ID-table-demo-css-user2' },
                                 //{ field: 'ResponseEmpname', title: '反应人', width: 170 },
                                 //{ field: 'ChargeEmpname', title: '负责人', width: 170 },
-                                { field: 'ResponseContent', width: '21%', title: '反应内容', style: 'color:#020615'},
-                                { field: 'Status', width: '10%', title: '执行状态'},
+                                { field: 'ResponseContent', width: '41%', title: '反应内容', style: 'color:#020615'},
+                                { field: 'Status', width: '15%', title: '执行状态'},
                                 {
                                     field: 'CreatTime', title: '填表时间', width: '12%',
                                     templet: "<div>{{ formatDate(d.CreatTime,'yyyy-MM-dd HH:mm:ss')}}</div>"
