1.fix问题列表个人页面，修完后跳转到问题列表个人的bug。2.问题列表和问题列表个人页面，显示状态不是完成和驳回至使用者的报修单

--- a/888repair/Views/Repair/ReplyRepairPCDetailVw.cshtml
+++ b/888repair/Views/Repair/ReplyRepairPCDetailVw.cshtml
@@ -541,7 +541,7 @@
                             success: function (result) {
                                 if (result.IsSuccess) {
                                     alert("送出成功");
-                                    var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
+                                    var url = "@(Url.Action("ProblemListPCIndex", "Repair"))";
                                     $("#content").load(url);
                                 }
                                 else {
@@ -569,7 +569,7 @@
                 success: function (result) {
                     if (result.IsSuccess) {
                         alert("送出成功");
-                         var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
+                         var url = "@(Url.Action("ProblemListPCIndex", "Repair"))";
                         $("#content").load(url);
                     }
                     else {
