fix问题列表个人跳转异常的问题

--- a/888repair/Views/Repair/ReplyRepairPCDetailVw.cshtml
+++ b/888repair/Views/Repair/ReplyRepairPCDetailVw.cshtml
@@ -605,7 +605,7 @@
                 success: function (result) {
                     if (result.IsSuccess) {
                         alert("转派成功");
-                         var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
+                         var url = "@(Url.Action("ProblemListPCIndex", "Repair"))";
                         $("#content").load(url);
                     }
                     else {
@@ -639,7 +639,7 @@
                 success: function (result) {
                     if (result.IsSuccess) {
                         alert("成功驳回任务");
-                         var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
+                         var url = "@(Url.Action("ProblemListPCIndex", "Repair"))";
                         $("#content").load(url);
                     }
                     else {
@@ -675,7 +675,7 @@
                 success: function (result) {
                     if (result.IsSuccess) {
                         alert("成功驳回至使用者");
-                         var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
+                         var url = "@(Url.Action("ProblemListPCIndex", "Repair"))";
                         $("#content").load(url);
                     }
                     else {
